test: fold the missing-value case into the matrix beside it
The null-in-list case only stood apart because List.of() rejects null; a
MethodSource can supply Arrays.asList, so it is now one more row of the
cases covering a condition with nothing to match on.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>